--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>ubutia | Home</title>
+        <title>Home</title>
         <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo-icon.png"/>
 
         <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -40,13 +40,13 @@
         </div>
         <div class="main">
             <header class="bg-img header">
-                <nav class="navbar navbar-default navbar-ubutia">
+                <nav class="navbar navbar-default navbar-leads generation">
                     <div class="container">
                         <div class="navigation-bar">
                             <div class="row">
                                 <div class="col-xs-6">
                                     <div class="logo">
-                                        <a href="index.html"><span class="ubutia-icon"></span></a>
+                                        <a href="index.html"><span class="leads generation-icon"></span></a> 
                                     </div>
                                 </div>
                                 <div class="col-xs-6 text-right">
@@ -62,9 +62,9 @@
                     <div class="row">
                         <div class="intro-box">
                             <div class="intro">
-                                <h1>We are ubutia agency</h1>
-                                <p>Creative digital agency based in US</p>
-                                <a class="btn ubutia-btn" href="#">Explore us</a>
+                                <h1>We are leads generation agency</h1>
+                                <p>Creative digital agency based in bangladesh</p>
+                                <a class="btn leads generation-btn" href="#">Explore us</a>
                             </div>
                         </div>
                     </div>
@@ -76,10 +76,10 @@
                         <div class="col-sm-8 col-sm-offset-2">
                             <h2 class="title">About agency</h2>
                             <p>
-                              uButia is a free bootstrap template created by freshdesignweb teams. The template includes the complete source files for download such as HTML5, CSS, CSS3 and JavaScript for easy customization.
+                              leads generatin is a free bootstrap template created by freshdesignweb teams. The template includes the complete source files for download such as HTML5, CSS, CSS3 and JavaScript for easy customization.
                             </p>
                             <img src="assets/images/signature.png">
-                            <span>ubutia Studio-ceo</span>
+                            <span>leads generation Studio-ceo</span>
                         </div>
                     </div>
                 </div>
@@ -89,13 +89,13 @@
                     <h2 class="title">What we do</h2>
                     <div class="row">
                         <div class="col-sm-4">
-                            <div class="ubutia-card">
-                                <div class="ubutia-card-header">
+                            <div class="leads generation-card">
+                                <div class="# added  below for video Maker FX-card-header">
                                     <div class="card-icon">
                                         <span class="graphic-design" aria-hidden="true"></span>
                                     </div>
                                 </div>
-                                <div class="ubutia-card-content">
+                                <div class="leads generation-card-content">
                                     <h3>Graphic Design</h3>
                                     <p>
                                        We provide the best grapich design for individual or coporate business purpose,also communication design, practice of planning and projecting ideas and experiences with visual eye.
@@ -104,13 +104,13 @@
                             </div>
                         </div>
                         <div class="col-sm-4">
-                            <div class="ubutia-card">
-                                <div class="ubutia-card-header">
+                            <div class="leads generation-card">
+                                <div class="leads generation-card-header">
                                     <div class="card-icon">
                                         <span class="webdevelopment" aria-hidden="true"></span>
                                     </div>
                                 </div>
-                                <div class="ubutia-card-content">
+                                <div class="leads generation-card-content">
                                     <h3>Web Development</h3>
                                     <p>
                                         We provide the best web development service for any personal or coporate project with great sulutions on demand, and we also use moderm web technology as well.
@@ -119,13 +119,13 @@
                             </div>
                         </div>
                         <div class="col-sm-4">
-                            <div class="ubutia-card">
-                                <div class="ubutia-card-header">
+                            <div class="leads generation-card">
+                                <div class="leads generation-card-header">
                                     <div class="card-icon">
                                         <span class="printing" aria-hidden="true"></span>
                                     </div>
                                 </div>
-                                <div class="ubutia-card-content">
+                                <div class="leads generation-card-content">
                                     <h3>Printing Design</h3>
                                     <p>
                                         We provide the best service with high-quality printing design and cost-effective printing for any business purpose.
@@ -160,7 +160,7 @@
                     </div>
                 </div>
             </section>
-            <section class="ubutia-quote section bg-img">
+            <section class="leads generation-quote section bg-img">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12">
@@ -179,11 +179,11 @@
                     <h2 class="title">Our workstations</h2>
                     <div id="workstation-slider" class="owl-carousel">
                         <div class="item">
-                            <div class="ubutia-card">
-                                <div class="ubutia-card-header">
+                            <div class="leads generation-card">
+                                <div class="leads generation-card-header">
                                     <img class="img-responsive" src="assets/images/4.jpg">
                                 </div>
-                                <div class="ubutia-card-content">
+                                <div class="leads generation-card-content">
                                     <h3>Creative Business Cup</h3>
                                     <p>
                                         Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
@@ -192,11 +192,11 @@
                             </div>
                         </div>
                         <div class="item">
-                            <div class="ubutia-card">
-                                <div class="ubutia-card-header">
+                            <div class="leads generation-card">
+                                <div class="leads generation-card-header">
                                     <img class="img-responsive" src="assets/images/5.jpg">
                                 </div>
-                                <div class="ubutia-card-content">
+                                <div class="leads generation-card-content">
                                     <h3>Creative Cover Design</h3>
                                     <p>
                                         Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
@@ -205,11 +205,11 @@
                             </div>
                         </div>
                         <div class="item">
-                            <div class="ubutia-card">
-                                <div class="ubutia-card-header">
+                            <div class="leads generation-card">
+                                <div class="leads generation-card-header">
                                     <img class="img-responsive" src="assets/images/6.jpg">
                                 </div>
-                                <div class="ubutia-card-content">
+                                <div class="leads generation-card-content">
                                     <h3>Creative Namecard</h3>
                                     <p>
                                         Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
@@ -218,11 +218,11 @@
                             </div>
                         </div>
                         <div class="item">
-                            <div class="ubutia-card">
-                                <div class="ubutia-card-header">
+                            <div class="leads generation-card">
+                                <div class="leads generation-card-header">
                                     <img class="img-responsive" src="assets/images/4.jpg">
                                 </div>
-                                <div class="ubutia-card-content">
+                                <div class="leads generation-card-content">
                                     <h3>Creative geeks</h3>
                                     <p>
                                        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
@@ -231,11 +231,11 @@
                             </div>
                         </div>
                         <div class="item">
-                            <div class="ubutia-card">
-                                <div class="ubutia-card-header">
+                            <div class="leads generation-card">
+                                <div class="leads generation-card-header">
                                     <img class="img-responsive" src="assets/images/5.jpg">
                                 </div>
-                                <div class="ubutia-card-content">
+                                <div class="leads generation-card-content">
                                     <h3>Creative freaks</h3>
                                     <p>
                                       Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
@@ -244,11 +244,11 @@
                             </div>
                         </div>
                         <div class="item">
-                            <div class="ubutia-card">
-                                <div class="ubutia-card-header">
+                            <div class="leads generation-card">
+                                <div class="leads generation-card-header">
                                     <img class="img-responsive" src="assets/images/6.jpg">
                                 </div>
-                                <div class="ubutia-card-content">
+                                <div class="leads generation-card-content">
                                     <h3>Creative nerds</h3>
                                     <p>
                                        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
@@ -275,12 +275,12 @@
                     <h2 class="title">Our team</h2>
                     <div class="row">
                         <div class="col-sm-4">
-                            <div class="ubutia-card">
-                                <div class="ubutia-card-header">
+                            <div class="leads generation-card">
+                                <div class="leads generation-card-header">
                                     <img class="img-responsive" src="assets/images/8.jpg">
                                 </div>
-                                <div class="ubutia-card-content">
-                                    <h3>Rosa Ly</h3>
+                                <div class="leads generation-card-content">
+                                    <h3>Md abdul halim</h3>
                                     <p>
                                       Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
                                     </p>
@@ -294,12 +294,12 @@
                             </div>
                         </div>
                         <div class="col-sm-4">
-                            <div class="ubutia-card">
-                                <div class="ubutia-card-header">
+                            <div class="leads generation-card">
+                                <div class="leads generation-card-header">
                                     <img class="img-responsive" src="assets/images/9.jpg">
                                 </div>
-                                <div class="ubutia-card-content">
-                                    <h3>Eva Ly</h3>
+                                <div class="leads generation-card-content">
+                                    <h3>md selim uddin</h3>
                                     <p>
                                         Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
                                     </p>
@@ -313,12 +313,12 @@
                             </div>
                         </div>
                         <div class="col-sm-4">
-                            <div class="ubutia-card">
-                                <div class="ubutia-card-header">
+                            <div class="leads generation-card">
+                                <div class="leads generation-card-header">
                                     <img class="img-responsive" src="assets/images/10.jpg">
                                 </div>
-                                <div class="ubutia-card-content">
-                                    <h3>Graham Bill</h3>
+                                <div class="leads generation-card-content">
+                                    <h3>md saiful islam</h3>
                                     <p>
                                       Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun. 
                                     </p>
@@ -343,7 +343,7 @@
                                 <div class="form-group">
                                     <input type="email" class="form-control" id="user-email" placeholder="Write your email here....">
                                 </div>
-                                <button type="submit" class="btn ubutia-btn">Send me</button>
+                                <button type="submit" class="btn leads generation-btn">Send me</button>
                             </form>
                         </div>
                     </div>
@@ -354,40 +354,40 @@
                     <h2 class="title">Drop us a line</h2>
                     <div class="row">
                         <div class="col-sm-4">
-                            <div class="ubutia-card">
-                                <div class="ubutia-card-header">
+                            <div class="leads generation-card">
+                                <div class="leads generation-card-header">
                                         <span class="fa fa-map-o" aria-hidden="true"></span>
                                 </div>
-                                <div class="ubutia-card-content">
+                                <div class="leads generation-card-content">
                                     <h3>Address</h3>
                                     <p>
-                                        Level 5, 25 pitt st, US
+                                       hathazari chittagong, 4000 bd.
                                     </p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-4">
-                            <div class="ubutia-card">
-                                <div class="ubutia-card-header">
+                            <div class="leads generation-card">
+                                <div class="leads generation-card-header">
                                         <span class="fa fa-phone" aria-hidden="true"></span>
                                 </div>
-                                <div class="ubutia-card-content">
+                                <div class="leads generation-card-content">
                                     <h3>Phone</h3>
                                     <p>
-                                        +555 211 3747
+                                        +8801864539191
                                     </p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-4">
-                            <div class="ubutia-card">
-                                <div class="ubutia-card-header">
+                            <div class="leads generation-card">
+                                <div class="leads generation-card-header">
                                         <span class="fa fa-paper-plane" aria-hidden="true"></span>
                                 </div>
-                                <div class="ubutia-card-content">
+                                <div class="leads generation-card-content">
                                     <h3>Email</h3>
                                     <p>
-                                        hey@freshdesignweb.com
+                                        info@makemoneyonlinepro.tk
                                     </p>
                                 </div>
                             </div>
@@ -408,7 +408,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12">
-                            <p>Design <font class="logo-icon"></font> by <a href="https://www.freshdesignweb.com/">freshDesignweb</a></p>
+                            <p>Design <font class="logo-icon"></font> by <a href="makemoneyonlinepro.tk/">nano pixel touch</a></p>
                         </div>
                     </div>
                 </div>
